--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2012-2013</span>
     					<h2>Higher Secondary School</h2>
-    					<span class="position">Army Public School</span>
+    					<span class="position">Mahatma Gandhi Junior College Manchar </span>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
 				</div>
